@@ -1421,7 +1421,8 @@ flow_find_cross_jump (basic_block bb1, basic_block bb2, rtx *f1, rtx *f2,
 /* Like flow_find_cross_jump, except start looking for a matching sequence from
    the head of the two blocks.  Do not include jumps at the end.
    If STOP_AFTER is nonzero, stop after finding that many matching
-   instructions.  */
+   instructions.  If STOP_AFTER is zero, count all INSN_P insns, if it is
+   non-zero, only count active insns.  */
 
 int
 flow_find_head_matching_sequence (basic_block bb1, basic_block bb2, rtx *f1,
@@ -1493,7 +1494,7 @@ flow_find_head_matching_sequence (basic_block bb1, basic_block bb2, rtx *f1,
 
 	  beforelast1 = last1, beforelast2 = last2;
 	  last1 = i1, last2 = i2;
-	  if (active_insn_p (i1))
+	  if (!stop_after || active_insn_p (i1))
 	    ninsns++;
 	}
 
@@ -2408,7 +2409,9 @@ try_head_merge_bb (basic_block bb)
       max_match--;
       if (max_match == 0)
 	return false;
-      e0_last_head = prev_active_insn (e0_last_head);
+      do
+	e0_last_head = prev_real_insn (e0_last_head);
+      while (DEBUG_INSN_P (e0_last_head));
     }
 
   if (max_match == 0)
@@ -2428,14 +2431,16 @@ try_head_merge_bb (basic_block bb)
       basic_block merge_bb = EDGE_SUCC (bb, ix)->dest;
       rtx head = BB_HEAD (merge_bb);
 
-      if (!active_insn_p (head))
-	head = next_active_insn (head);
+      while (!NONDEBUG_INSN_P (head))
+	head = NEXT_INSN (head);
       headptr[ix] = head;
       currptr[ix] = head;
 
       /* Compute the end point and live information  */
       for (j = 1; j < max_match; j++)
-	head = next_active_insn (head);
+	do
+	  head = NEXT_INSN (head);
+	while (!NONDEBUG_INSN_P (head));
       simulate_backwards_to_point (merge_bb, live, head);
       IOR_REG_SET (live_union, live);
     }
